<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_extra_light_purple"
    tools:context=".ui.fragment.registration.registration.RegisterFragment">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieRegisterAnim"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_margin="20dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="false"
        app:lottie_rawRes="@raw/register_animation" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/lobster"
        android:text="@string/sign_up_and_join_us"
        android:textAlignment="textStart"
        android:textColor="@color/app_yellow"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.625"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottieRegisterAnim"
        tools:layout_editor_absoluteY="321dp" />

    <EditText
        android:id="@+id/usernameTextInputRegister"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/custom_registration_input_background"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="15dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:ignore="SpeakableTextPresentCheck" />


    <EditText
        android:id="@+id/emailTextInputRegister"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/custom_registration_input_background"
        android:hint="@string/email_address"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="15dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextInputRegister"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/passwordTextInputRegister"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="2dp"
        android:background="@drawable/custom_registration_input_background"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:paddingEnd="55dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTextInputRegister"
        tools:ignore="SpeakableTextPresentCheck" />


    <ImageView
        android:id="@+id/visibilityIcon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/visibility_off_icon"
        app:layout_constraintBottom_toBottomOf="@id/passwordTextInputRegister"
        app:layout_constraintEnd_toEndOf="@id/passwordTextInputRegister"
        app:layout_constraintTop_toTopOf="@+id/passwordTextInputRegister"
        app:tint="@color/app_dark_purple" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpButton"
        android:layout_width="200dp"
        android:layout_height="55dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/custom_registration_button_background_purple"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextInputRegister" />

    <TextView
        android:id="@+id/goToSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lobster"
        android:text="@string/you_have_an_account"
        android:textAlignment="center"
        android:textColor="@color/app_yellow"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton" />


</androidx.constraintlayout.widget.ConstraintLayout>